[gd_scene load_steps=12 format=3 uid="uid://d3q8ejf72rwac"]

[ext_resource type="Script" path="res://Scenes/VFX/fire_ball.gd" id="1_irv37"]
[ext_resource type="Shader" path="res://Scenes/VFX/fire_ball.gdshader" id="2_23h7x"]
[ext_resource type="ArrayMesh" uid="uid://dbi85xwqaikhi" path="res://Assets/graphics/vfx/fireball_shell_mesh.obj" id="2_cokky"]

[sub_resource type="SphereShape3D" id="SphereShape3D_ym7gm"]

[sub_resource type="Gradient" id="Gradient_iw5hh"]
colors = PackedColorArray(0.905882, 0.0901961, 0, 1, 1, 0.870588, 0.262745, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_5mnrb"]
gradient = SubResource("Gradient_iw5hh")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_jx73k"]
noise_type = 2
fractal_type = 0

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_wbgqw"]
seamless = true
noise = SubResource("FastNoiseLite_jx73k")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x2xu1"]
render_priority = 0
shader = ExtResource("2_23h7x")
shader_parameter/noise_sampler = SubResource("NoiseTexture2D_wbgqw")
shader_parameter/gradient_sampler = SubResource("GradientTexture1D_5mnrb")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_x044q"]
albedo_color = Color(0.745098, 0.0235294, 0, 1)
emission_enabled = true
emission = Color(0.854902, 0.215686, 0.0705882, 1)
emission_energy_multiplier = 2.18

[sub_resource type="SphereMesh" id="SphereMesh_igtil"]
material = SubResource("StandardMaterial3D_x044q")

[node name="FireBall" type="Area3D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_irv37")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_ym7gm")

[node name="FireballMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
material_override = SubResource("ShaderMaterial_x2xu1")
mesh = ExtResource("2_cokky")

[node name="MeshInstance3D" type="MeshInstance3D" parent="FireballMesh"]
mesh = SubResource("SphereMesh_igtil")

[node name="Lifetime Timer" type="Timer" parent="."]
wait_time = 15.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Lifetime Timer" to="." method="_on_lifetime_timer_timeout"]
